src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.gameTitle {
  height: 5em;
  width: 500px;
  background-color: #F5EE9E;
  margin: 0.5em auto;
  border-radius: 10px;
}

.game {
  width: 500px;
  background-color: #246EB9;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  
}

.question {
  margin: 5px 5px;
  padding: 0.25em;
  height: 3em;
  word-wrap: normal;
  background-color: #9ecff5;
  border-radius: 10px;
}

.answercard {
  height: 50px;
  width: 200px;
  margin: .75em auto;
  border-radius: 10px;
  padding: .5em;
  cursor: pointer;
}

.answercard:hover{
  filter: drop-shadow(0 0 .5em #EEF4ED);
}

button{
  margin: 10px;
}

#score{
  margin:0.5em auto;
  width: 8em;
  background-color: #EEF4ED;
}

